fix text alignement in messages

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -2,6 +2,7 @@
   display: flex;
   margin-top: 10px;
   margin-bottom: 10px;
+  text-align: left;
 
   &__wrapper {
     display: flex;
